Move InterpTest to integration testing dir, and tweak sbt project file.